@@ -1,7 +1,6 @@
 package com.conkiri.domain.sharing.dto.response;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.conkiri.domain.sharing.entity.Comment;
 
@@ -13,7 +12,7 @@ public record CommentResponseDTO(
 		return new CommentResponseDTO(
 			comments.stream()
 				.map(CommentDetailResponseDTO::from)
-				.collect(Collectors.toList()),
+				.toList(),
 			!hasNext
 		);
 	}
